- add product pagination & search